fixed the error message alignement for small screen devices.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,17 +101,20 @@ a{
 }
 
 .error-card {
+    padding: .5rem 1.5rem;  
     background: var(--white);   
     color: var(--black); 
     border-radius: 5px;
-    padding: 1% 2%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     gap: 1%;
-    max-width: 30rem;
-    min-width: 25rem;
+
+}
+
+.error-dialog-text {
+    word-break: break-all;
 }
 
 .card-title {
@@ -383,6 +386,12 @@ small {
         text-align: initial;
     }
 
+    .error-card {
+        max-width: 30rem;
+        width: 85vw;
+        min-width: 15rem;      
+        padding: 1rem 3rem;
+    }
 }
 
 #canvas1 {
